--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@ sites/*/settings*.php
 sites/*/files
 sites/*/private
 
+#Ignore development modules
+sites/all/modules/development
+
 #Ignore private working directories
 .kdev4/
 *.kdev4
